--- a/src/source/Exira.Jil/Exira.Jil.fsproj
+++ b/src/source/Exira.Jil/Exira.Jil.fsproj
@@ -9,9 +9,10 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Exira.Jil</RootNamespace>
     <AssemblyName>Exira.Jil</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
     <Name>Exira.Jil</Name>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
